Fixing overflow of execution tree node with text wrapping (ZU-74)

--- a/step-controller/step-controller-server-webapp/src/main/resources/webapp/css/step.css
+++ b/step-controller/step-controller-server-webapp/src/main/resources/webapp/css/step.css
@@ -623,3 +623,7 @@ table.executionTableResult td {
 .parameter-scope-application {
 	background:#f5e30a;
 }
+
+.text-wrapping {
+	overflow-wrap: break-word;
+}
